# magnetism-tools

./: .buildinfo  LICENSE  environment.yaml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/source/: modules.doctree  msgjson.doctree  tutorial_crcl3.doctree  tutorial_mnf2.doctree  tutorial_mno.doctree  tutorial_rucl3.doctree  tutorials.doctree
.github/workflows/: gh-pages.yml
_sources/: index.rst.txt
_sources/source/: modules.rst.txt  msgjson.rst.txt  tutorial_crcl3.rst.txt  tutorial_mnf2.rst.txt  tutorial_mno.rst.txt  tutorial_rucl3.rst.txt  tutorials.rst.txt
data/: j2.csv  msg_operators.schema.json
docs/: conf.py  index.rst
docs/source/: tutorial_crcl3.rst  tutorial_mno.rst  tutorial_rucl3.rst
source/: modules.html  msgjson.html  tutorial_crcl3.html  tutorial_mnf2.html  tutorial_mno.html  tutorial_rucl3.html  tutorials.html
src/msgjson/: __init__.py  _version.py  build.py  form_factors.py  query.py  schema.py  spglib_source.py  validate.py
tests/: test_query.py  test_schema.py  test_selected_groups.py
